[gd_scene load_steps=10 format=3 uid="uid://c7o053tqqd5m2"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_4gxji"]
[ext_resource type="PackedScene" uid="uid://brsx201tf1fsy" path="res://nodes/map/world.tscn" id="2_w0xyy"]
[ext_resource type="PackedScene" uid="uid://b3h7ws5vq577b" path="res://nodes/player/player_new.tscn" id="3_6254j"]
[ext_resource type="Texture2D" uid="uid://doolw6axapnxb" path="res://nodes/player/model/player_1.png" id="4_upqfu"]
[ext_resource type="PackedScene" uid="uid://c3bt4rg67wn8q" path="res://resources/gui/gui.tscn" id="5_o770i"]
[ext_resource type="AudioStream" uid="uid://c8rxm7vaxv1pd" path="res://sfx/main_theme.ogg" id="6_53x1c"]
[ext_resource type="AudioStream" uid="uid://c5bda5dqfxbty" path="res://sfx/ambience_forest.wav" id="7_wvqa0"]

[sub_resource type="GDScript" id="GDScript_74j5c"]
script/source = "extends Node

func _process(_delta):
	if Input.is_action_just_released(\"Enter\"):
		get_tree().paused = false
		
func _input(event):
	if not (event is InputEventMouseMotion):
		logging.add_input(event.as_text())

"

[sub_resource type="GDScript" id="GDScript_5gs57"]
script/source = "extends Node2D

func _process(_delta):
	queue_redraw()

func _draw():
	var vieport_size = get_viewport().size * 0.5
	for camera_id in globals.cameras.size():
		var vieport_offset = Vector2((floori(camera_id/2.0))%2, camera_id%2 )
		var vieport_rect = Rect2(vieport_offset * vieport_size, vieport_size)
		draw_rect(vieport_rect, Color.GREEN, false)
	var parent = get_parent().get_parent()
	for i in parent.spawn_rate.size()-1:
		draw_line( vieport_size + Vector2(i, -parent.spawn_rate[i]*2), vieport_size + Vector2(i+1, -parent.spawn_rate[i+1]*2), Color.GHOST_WHITE, 5 )
		if not i%60:
			draw_circle(vieport_size + Vector2(i, -parent.spawn_rate[i]*2),7, Color.RED)
			var default_font = ThemeDB.fallback_font

			draw_string(default_font, vieport_size + Vector2(i+20, 20-parent.spawn_rate[i]*2), str(parent.spawn_rate[i]))

#	for camera_id in globals.cameras.size():
#		bounding_rect = Rect2() 
#		bounding_rect.position = globals.cameras[camera_id].unproject_position(%MeshInstance3D.global_position) 
#		# BBOX na Viewport coords
#		for i in b_box_points.size():
#			bounding_rect = bounding_rect.expand(globals.cameras[camera_id].unproject_position(%MeshInstance3D.to_global(b_box_points[i])))
#		var vieport_size = get_viewport().size * 0.5
#		var vieport_offset = Vector2(camera_id%2, (floori(camera_id/2))%2)
#
#		var vieport_rect = Rect2(vieport_offset * vieport_size, vieport_size)
#
#		bounding_rect.position += vieport_offset * vieport_size
#		bounding_rect = bounding_rect.intersection(vieport_rect)
"

[node name="viewports" type="Node"]
script = ExtResource("1_4gxji")

[node name="Pauser" type="Node" parent="."]
process_mode = 2
script = SubResource("GDScript_74j5c")

[node name="world" parent="." instance=ExtResource("2_w0xyy")]

[node name="ViewportsContainer" type="GridContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
columns = 2

[node name="Player1" type="SubViewportContainer" parent="ViewportsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportsContainer/Player1"]
handle_input_locally = false
audio_listener_enable_3d = true
gui_disable_input = true
size = Vector2i(958, 538)
render_target_update_mode = 4

[node name="player" parent="ViewportsContainer/Player1/SubViewport" instance=ExtResource("3_6254j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.56, 0, -61.467)
player_texture = ExtResource("4_upqfu")
player_enabled = true

[node name="Marker3D" type="Marker3D" parent="ViewportsContainer/Player1/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -31.56, 0, -61.467)
gizmo_extents = 1.0

[node name="Player3" type="SubViewportContainer" parent="ViewportsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportsContainer/Player3"]
handle_input_locally = false
audio_listener_enable_3d = true
gui_disable_input = true
size = Vector2i(958, 538)
render_target_update_mode = 4

[node name="player_spawn" type="Marker3D" parent="ViewportsContainer/Player3/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 34.211, 0, -89.808)
gizmo_extents = 1.0

[node name="Player2" type="SubViewportContainer" parent="ViewportsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportsContainer/Player2"]
handle_input_locally = false
audio_listener_enable_3d = true
gui_disable_input = true
size = Vector2i(958, 538)
render_target_update_mode = 4

[node name="player_spawn" type="Marker3D" parent="ViewportsContainer/Player2/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 49.254, 0, 11.733)
gizmo_extents = 5.0

[node name="Player4" type="SubViewportContainer" parent="ViewportsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
stretch = true

[node name="SubViewport" type="SubViewport" parent="ViewportsContainer/Player4"]
handle_input_locally = false
audio_listener_enable_3d = true
gui_disable_input = true
size = Vector2i(958, 538)
render_target_update_mode = 4

[node name="player_spawn" type="Marker3D" parent="ViewportsContainer/Player4/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -43.734, 0, 7.974)

[node name="GUI" parent="." instance=ExtResource("5_o770i")]

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_53x1c")
volume_db = -12.0
autoplay = true
bus = &"Music"

[node name="ambient" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wvqa0")
volume_db = -22.0
autoplay = true
bus = &"Ambient"

[node name="Dialog" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="Node2D" type="Node2D" parent="CanvasLayer"]
script = SubResource("GDScript_5gs57")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 275.0
offset_top = 7.0
offset_right = 315.0
offset_bottom = 30.0

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 275.0
offset_top = 31.0
offset_right = 315.0
offset_bottom = 54.0
